Fix report generation: ensure all dates and employees are included regardless of existing data